--- a/wware/develop/dannyanne/design/template/catalog/layer/view.phtml
+++ b/wware/develop/dannyanne/design/template/catalog/layer/view.phtml
@@ -49,7 +49,7 @@
                 <?php $_filters = $this->getFilters() ?>
                 <?php foreach ($_filters as $_filter): ?>
                 <?php if($_filter->getItemsCount()): ?>
-                    <dt><?php echo $this->__($_filter->getName()) ?></dt>
+                    <dt class="<?php $this->__($_filter->getName()); ?>"><?php echo $this->__($_filter->getName()) ?></dt>
                     <dd><?php echo $_filter->getHtml() ?></dd>
                 <?php endif; ?>
                 <?php endforeach; ?>
