--- a/wware/develop/dannyanne/design/template/catalog/layer/filter.phtml
+++ b/wware/develop/dannyanne/design/template/catalog/layer/filter.phtml
@@ -35,8 +35,8 @@
 <?php foreach ($this->getItems() as $_item): ?>
     <li>
         <?php if ($_item->getCount() > 0): ?>
-        <a href="<?php echo $this->urlEscape($_item->getUrl()) ?>"><?php echo $_item->getLabel() ?></a>
-        <?php else: echo $_item->getLabel() ?>
+        <a href="<?php echo $this->urlEscape($_item->getUrl()) ?>"><?php echo $this->__($_item->getLabel()); ?></a>
+        <?php else: echo $this->__($_item->getLabel()) ?>
         <?php endif; ?>
         <?php if ($this->shouldDisplayProductCount()): ?>
         (<?php echo $_item->getCount() ?>)
