--- a/wware/develop/dannyanne/design/template/catalog/product/list.phtml
+++ b/wware/develop/dannyanne/design/template/catalog/product/list.phtml
@@ -32,6 +32,7 @@
  */
 ?>
 
+<? //START ====== QuckView用JS ======= ?>
 <style type="text/css">
 .quickvew-button { position:relative ; bottom:0px; left:0px; }
 .quickview-panel {	position: absolute; 
@@ -44,41 +45,59 @@
 }
 
 .quickview-panel img { margin: 2px 2px; }
+.quickview-panel .qv-description {}
+.quickview-panel .qv-detail-button {position: absolute; width:155px; bottom: 20px; right: 5px; background-color: #999;}
 .quickview-panel .qv-close-button {position: absolute; width:155px; bottom: 0px; right: 5px; background-color: #999;}
 </style>
 
-<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+<!--<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>-->
 <script type="text/javascript" src="/store/js/fx.js"></script>
 <script>
-function qv_on(pid, imgurls){
+function qv_on(pid, imgurls, description){
 	o = document.getElementById(pid);
+	o.innerHTML = "";
+	o.style.width = "0px";
+//	if(o.parentNode.parentNode.className == "item last"){
+	if(true){
+		o.style.left = "0px";
+		animTo = {'width': '165px', 'left': '-165px'}
+	}else{
+		animTo = {'width': '165px'}
+	}
 	o.style.visibility = "visible";
-	jQuery(o).animate({
-		'width': '165px'
-	},{
-		'complete': function(){
-			jQuery.get(	"/store/wware/getMediaGallery.php",
+	jQuery(o).animate(
+		animTo,
+		{
+			'complete': function(){
+			jQuery.post(	"/store/wware/getMediaGallery.php",
 				{imgs:imgurls, id:pid.replace("qv", "")},
 				function(data){
-					o.innerHTML = data;
-					o.innerHTML += '<a class="qv-close-button" href="javascript:void(0);" onclick="qv_off(this);">X</a>';
+					o.innerHTML  = data;
+					o.innerHTML += '<p class="qv-description">' + description + '</p>';
+					o.innerHTML += '<div class="qv-detail-button">More</div>';
+					o.innerHTML += '<a class="qv-close-button" href="javascript:void(0);" onclick="qv_off(this.parentNode.id);">X</a>';
 				}
 			);
 		}
 	});
-
-//	o.style.width = "165px";
 	o.style.zIndex = 9999;
-	o.pid = pid;
-	
+	o.pid = pid;	
 }
 
-function qv_off(o){
-	o = document.getElementById(o.parentNode.id);
+function qv_off(pid){
+	o = document.getElementById(pid);
+//	if(o.parentNode.parentNode.className == "item last"){
+	if(true){
+		o.style.left = "-165px";
+		animTo = {'width': '0px', 'left': '0px'}
+	}else{
+		animTo = {'width': '0px'}
+	}
+
 	o.innerHTML = "";
-	jQuery(o).animate({
-		'width': '0px'
-	},{
+	jQuery(o).animate(
+		animTo,
+		{
 		'complete': function(){
 			o.style.visibility = "hidden";
 		}
@@ -93,10 +112,15 @@ function qv_changeimg(imgUrl, id){
 }
 
 </script>
+<? //END ====== QuckView用JS ======= ?>
+
 
 <?php
     $_productCollection=$this->getLoadedProductCollection();
     $_helper = $this->helper('catalog/output');
+    
+    // NEW ARRIVALSかRE ARRIVALSページから呼び出された事を判別するためにページIDを取得
+    $pageId = Mage::getBlockSingleton('cms/page')->getPage()->getIdentifier();
 ?>
 
 <?php if(!$_productCollection->count()): ?>
@@ -106,15 +130,14 @@ function qv_changeimg(imgUrl, id){
     <?php echo $this->getToolbarHtml() ?>
     <?php // List mode ?>
     <?php if($this->getMode()!='grid'): ?>
-
+    	<?php //リストモードはなしなのでざっくり削除 ?>
     <?php else: ?>
-
-    <?php // Grid Mode ?>
 
     <?php $_collectionSize = $_productCollection->count() ?>
     <?php $_columnCount = 4; //$this->getColumnCount(); ?>
     <?php $i=0; foreach ($_productCollection as $_product): ?>
     <?php
+    	//NEW、再入荷、セール、売り切れのバッジ用divを商品属性を検証して生成する。
     	$div_new = "";
     	$div_renew = "";
     	$div_sale = "";
@@ -143,8 +166,8 @@ function qv_changeimg(imgUrl, id){
     	$badge = "<ul>" . $div_new . $div_renew . $div_sale . $div_soldout . "</ul>";
 
 	?>
-		<?php if( $_REQUEST["type"] == "new" & $div_new == ""){ continue; } ?>
-		<?php if( $_REQUEST["type"] == "renew" & $div_renew == ""){ continue; } ?>
+		<?php if( $pageId == "newarrivals" & $div_new == ""){ continue; } ?>
+		<?php if( $pageId == "rearrivals" & $div_renew == ""){ continue; } ?>
 
         <?php if ($i++%$_columnCount==0): ?>
         <ul class="products-grid">
@@ -172,9 +195,11 @@ function qv_changeimg(imgUrl, id){
 				<?php foreach ($p->getMediaGalleryImages() as $image): ?>
 					<?php $imgurls .= $image->getUrl() . ' '; ?>
 				<?php endforeach; ?>
-                
+                <?php $shortDescription = $_product->getShortDescription(); ?>
 	            <div class="quickvew-button">
-	                <a href="javascript:void(0);" onclick="qv_on('qv<?php echo $_product->getId(); ?>', <?php echo "'" . $imgurls . "'"; ?>);">QUICK VEW</a>
+	                <a	href="javascript:void(0);"
+	                	onclick="qv_on('qv<?php echo $_product->getId(); ?>', <?php echo "'" . $imgurls . "', '" . $shortDescription . "'"; ?> );"
+	                >QUICK VEW</a>
 	            </div>
 	            
                 <h2 class="product-name"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $this->__($_product->getName()), 'name') ?></a></h2>
